[gd_scene load_steps=2 format=3 uid="uid://xwgfdfp0i4u0"]

[ext_resource type="Script" uid="uid://bu2mbyrsocpnu" path="res://data/main.gd" id="1_f0jm3"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f0jm3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "25:00"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Ready"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StartPauseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Start"

[node name="StopButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
disabled = true
text = "Stop"

[node name="SkipButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
disabled = true
text = "Skip"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="BottomButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SettingsButton" type="Button" parent="VBoxContainer/BottomButtonContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "âš™"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/StartPauseButton" to="." method="_on_start_pause_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BottomButtonContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
